mengubah akun ig

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
        </div>
        <div class="row">
          <div class="col-sm-12">
-           <a href="https://www.instagram.com/vinz8866"><i class="fa fa-instagram"></i></a>
+           <a href="https://www.instagram.com/calvin_017017"><i class="fa fa-instagram"></i></a>
          </div>
        </div>
      </div>
